Novas atualizações de design e funções

--- a/src/app/conta_usuario/adresses/form-address/form-address.component.html
+++ b/src/app/conta_usuario/adresses/form-address/form-address.component.html
@@ -1,6 +1,7 @@
 <div class="row" [formGroup]="form">
 
     <div class="col-sm-12">
+        <h2> Novo endereço </h2>
         <mat-form-field>
             <mat-label> Nome do endereço </mat-label>
             <input formControlName="nomeendereco" matInput placeholder="Minha casa">
@@ -29,7 +30,7 @@
         </mat-form-field>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-9">
         <mat-form-field>
             <mat-label> Logradouro </mat-label>
             <input formControlName="rua" matInput placeholder="Rua/Avenida">
