--- a/src/app/conta_usuario/data-user/data-user.component.html
+++ b/src/app/conta_usuario/data-user/data-user.component.html
@@ -10,15 +10,15 @@
     </mat-form-field>
     <mat-form-field>
         <mat-label> Telefone </mat-label>
-        <input matInput formControlName="telefone">
+        <input matInput formControlName="telefone" mask="(00)00000-0000">
     </mat-form-field>
     <mat-form-field>
         <mat-label> CPF </mat-label>
-        <input matInput formControlName="cpf">
+        <input matInput formControlName="cpf" mask="000.000.000-00">
     </mat-form-field>
     <mat-form-field>
         <mat-label> Data de nascimento </mat-label>
-        <input matInput formControlName="datanascimento">
+        <input matInput formControlName="datanascimento" type="date">
     </mat-form-field>
 
 
