--- a/src/app/inicio/user-registration/user-registration.component.css
+++ b/src/app/inicio/user-registration/user-registration.component.css
@@ -1,5 +1,5 @@
 .c0 {
-    height: 88.3vh;
+    height: 100vh;
 }
 
 .c1 {}
@@ -26,5 +26,5 @@
 }
 
 .all {
-    background-color: #1E88E5;
+    background-color: #673AB7;
 }
