--- a/src/app/conta_usuario/perfil-user/perfil-user.component.css
+++ b/src/app/conta_usuario/perfil-user/perfil-user.component.css
@@ -48,12 +48,13 @@
 }
 
 .ttool {
-    color: #a9a9a9;
+    color: #3F51B5;
     font-size: 14px;
     padding-top: 2px;
     padding-bottom: 0;
     margin: 0;
     height: 40px;
+    font-weight: 400;
 }
 
 .logoEmpresa {
