--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -8,11 +8,13 @@
     border-bottom: 1px solid #f1e8e8;">
 
         <div class="col-sm-6 mp0R mp0L">
-            <img width="100%" style="height: 400px;" class="img-resposive" [lazyLoad]="itemCatalogo.imagem" alt="">
+            <div style="background-color: rgb(244, 236, 236)(244, 236, 236);" [lazyLoad]="itemCatalogo.imagem" class="img-item">
+            </div>
+            <div [lazyLoad]="itemCatalogo.imagem" class="img-item-prod"></div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 clsqw mp0R mp0L" style="background: white;">
             <div style="display: flex;justify-content: space-between;align-items: center;">
-                <div style="font-size: 18px; font-weight: 900;"> {{ itemCatalogo.nome }} </div>
+                <div style="font-size: 18px; font-weight: 500;margin-left: 10px;"> {{ itemCatalogo.nome }} </div>
                 <div>
                     <button routerLink="/" mat-icon-button>
             <mat-icon>close</mat-icon>
@@ -22,10 +24,10 @@
 
             <div class="cc0">
 
-                <div style="margin-top: 30px; color: #505050;">
+                <div style="margin-top: 30px; color: #505050;margin-left: 10px; font-size: 14px;">
                     {{ itemCatalogo.descricao }}
                 </div>
-                <div style="margin-top: 20px;font-weight: 500;">
+                <div style="margin-top: 20px;font-weight: 500;margin-left: 10px">
                     {{ itemCatalogo.preco | currency }}
                 </div>
                 <span *ngFor="let item of itemCatalogo.categoriaadicional">
@@ -33,8 +35,8 @@
             <div class="catadc"> {{ item.nome }} </div>
             <div class="itemadc" *ngFor="let adicional of item.itens">
               <div>
-                <div style="color: rgb(110, 110, 110);">{{ adicional.nome }}</div>
-                <div>{{ adicional.preco | currency }}</div>
+                <div style="color: rgb(110, 110, 110);margin-left: 10px">{{ adicional.nome }}</div>
+                <div style="margin-left: 10px;font-size: 13px;">{{ adicional.preco | currency }}</div>
               </div>
               <div>
 
@@ -56,7 +58,7 @@
         </span>
                 <div class="boxoc">
                     <mat-form-field class="example-full-width">
-                        <mat-label>Observação</mat-label>
+                        <mat-label> Alguma observação?</mat-label>
                         <textarea #observacaoUsuario matInput placeholder="Ex. Digite aqui a observação para o produto..."></textarea>
                     </mat-form-field>
                 </div>
@@ -82,7 +84,7 @@
 
 
                     <button mat-raised-button color="primary" style="margin-left: 20px;" (click)="onclickAddCar(observacaoUsuario.value)">
-            <mat-icon>add_shopping_cart</mat-icon> Adicionar
+            <mat-icon>add_shopping_cart</mat-icon> {{ itemCatalogo.total | currency:'BRL':true }} Adicionar
           </button>
                 </div>
 
