--- a/src/app/inicio/user-registration/user-registration.component.html
+++ b/src/app/inicio/user-registration/user-registration.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12 all">
-    <div class="col-sm-12 aimg">
+    <div class="col-sm-12 aimg" style="position: absolute;">
         <img class="imglogo" [src]="service.getDadosEmpresa().imagem">
     </div>
 
