--- a/src/app/inicio/content/content.component.html
+++ b/src/app/inicio/content/content.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12">
+<div class="col-sm-12 bMobile">
     <div class="row mp0R">
 
 
@@ -10,7 +10,7 @@
         </div>
         <!--Col 1-->
 
-        <div class="col-sm-4 mp0L">
+        <div class="col-sm-4 mp0L hiddenEl">
             <app-bag [autofix]="true" [showBtF]="service.getStatusBtbag()"></app-bag>
         </div>
 
