--- a/src/app/inicio/footer/footer.component.html
+++ b/src/app/inicio/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12" style="margin-top: 100px;margin-bottom: 90px;">
     <div class="row">
-        <div class="col-sm-2">
+        <div class="col-sm-2 hiddenEl">
             <img width="70px" [src]="service.getDadosEmpresa().imagem" alt="logo" style="border-radius: 10px;">
         </div>
 
