--- a/src/app/inicio/capa/capa.component.html
+++ b/src/app/inicio/capa/capa.component.html
@@ -1,30 +1,49 @@
-<div class="c col-sm-12">
-    <div class="row" style="align-items: center;justify-content: space-between;">
+<div class="c col-sm-12 bMobile">
+    <div class="row bMobile" style="align-items: center;justify-content: space-between;">
 
         <div class="c1 col-sm-3">
             <div class="logo" [lazyLoad]="service.getDadosEmpresa().imagem"></div>
         </div>
 
-        <div class="c1a col-sm-3" style="margin-top: 15px;">
-            <div class="c2">Entregar em</div>
-            <div class="ccgion">
-                <a href="javascript:;" style="text-decoration: none;display: flex;color: black;" (click)="selectAddress()">
-                    <mat-icon style="color: #da4444;font-size: 19px;">place</mat-icon>
-                    <span *ngIf="!bagServ.getEnderecoEntrega().cidade.nome">Escolha um endereço</span>
-                    <span *ngIf="bagServ.getEnderecoEntrega().cidade.nome"> {{ bagServ.getEnderecoEntrega().bairro.nome }} - {{ bagServ.getEnderecoEntrega().cidade.nome }} </span>
-                    <mat-icon class="mat-18">expand_more</mat-icon>
+        <div class="c1a col-sm-3 hiddenEl" style="margin-top: 15px;">
+            <div class="c2 hiddenEl">Entregar em</div>
+            <div class="ccgion hiddenEl">
+                <a class="hiddenEl" href="javascript:;" style="text-decoration: none;display: flex;color: black;" (click)="selectAddress()">
+                    <mat-icon class="hiddenEl" style="color: #da4444;font-size: 19px;">place</mat-icon>
+                    <span class="hiddenEl" *ngIf="!bagServ.getEnderecoEntrega().cidade.nome">Escolha um endereço</span>
+                    <span class="hiddenEl" *ngIf="bagServ.getEnderecoEntrega().cidade.nome"> {{ bagServ.getEnderecoEntrega().bairro.nome }} - {{ bagServ.getEnderecoEntrega().cidade.nome }} </span>
+                    <mat-icon class="mat-18 hiddenEl">expand_more</mat-icon>
                 </a>
+
             </div>
+
+
+
+
         </div>
 
-        <div class="c1b col-sm-3">
-            <div class="">
+        <div class="bbmob showinMobile">
+            <button mat-icon-button color="primary" (click)="selectAddress()">
+          <mat-icon>place</mat-icon>
+        </button>
+
+            <button mat-icon-button color="primary" routerLink="/finish">
+          <mat-icon>shopping_cart</mat-icon>
+        </button>
+
+            <button mat-icon-button color="primary" (click)="onClickBt1()">
+          <mat-icon>login</mat-icon>
+        </button>
+        </div>
+
+        <div class="c1b col-sm-3 hiddenEl">
+            <div class="hiddenEl">
                 <a *ngIf="!service.getDadosUsuario().id" mat-button color="primary" (click)="onClickBt1()">
                     <mat-icon>login</mat-icon> Entrar </a>
                 <a *ngIf="service.getDadosUsuario().id" mat-button color="primary" routerLink="/perfil-user">
                     <mat-icon>login</mat-icon> Perfil </a>
             </div>
-            <div>
+            <div class="hiddenEl">
                 <button mat-button color="primary" routerLink="/finish"><mat-icon>shopping_cart</mat-icon> Sacola </button>
             </div>
         </div>
